Comments added to code
